--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -1,1 +1,12 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %} {% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %} 
+
+<h1 align="center">Make a Post</h1>
+
+<form action="POST">
+    <textarea name="text" id="text" class="form-control"></textarea>
+    <br/>
+    <div align="center">
+        <button type="submit" class="btn btn-lg btn-primary">Post</button>
+    </div>
+</form>
+{% endblock %}
