--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -6,7 +6,12 @@
     <textarea name="text" id="text" class="form-control"></textarea>
     <br/>
     <div align="center">
-        <button type="submit" class="btn btn-lg btn-primary">Post</button>
+        <button type="submit" class="btn btn-lg btn-primary">P</button>
     </div>
 </form>
+<br/>
+<div align="center">
+    <a href="/home"><button type="button" class="btn btn-lg btn-secondary">Back</button></a>
+</div>
+
 {% endblock %}
