--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,13 +1,33 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %} {% endblock %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Home</h1>
-    <div></div>
-</body>
-</html>
+{% extends "base.html" %} {% block title %}Home{% endblock %} 
+{% block content %} 
+<h1 align="center">Posts</h1>
+<div id="posts">
+    {% for post in posts%}
+    <div class="card border-dark">
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
+            {% if user.id == post.author %}
+            <div class="btn-group">
+                <button 
+                type="button"
+                class="btn btn-sm btn-primary dropdown-toggle"
+                data-bs-toggle="dropdown"
+                ></button>
+                <ul class="dropdown-menu">
+                    <li><a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a></li>
+                </ul>
+            </div>
+        </div>
+        {% endif %}
+    </div>
+    <div class="card-body">
+        <div class="card-text">{{post.text}}</div>
+    </div>
+    <div class="card-footer text-muted">{{post.date_created}}</div>
+</div>
+<br/> {% endfor %}
+<div align="center">
+    <a href="/create-post"><button type="button" class="btn btn-primary btn-lg">Create a Post</button></a>
+</div>
+</div>
+{% endblock %}
