--- a/website/templates/posts.html
+++ b/website/templates/posts.html
@@ -1,1 +1,8 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %} {% endblock %}
+{% extends "posts_div.html" %} {% block title %}{{username}}'s Posts{% endblock %} 
+{% block header %} {{username}}'s Posts {% endblock %} 
+{% block footer %} 
+{% block footer %}
+<div align="center">
+    <a href="/home"><button type="button" class="btn btn-secondary btn-lg">Back</button></a>
+</div>
+{% endblock %}
