post feature fixed

--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -2,11 +2,11 @@
 
 <h1 align="center">Make a Post</h1>
 
-<form action="POST">
+<form method="POST">
     <textarea name="text" id="text" class="form-control"></textarea>
     <br/>
     <div align="center">
-        <button type="submit" class="btn btn-lg btn-primary">P</button>
+        <button type="submit" class="btn btn-lg btn-primary">Post</button>
     </div>
 </form>
 <br/>
