--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -6,7 +6,15 @@
       <div class="card border-dark">
         <div class="card-header d-flex justify-content-between align-items-center">
           <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
-          {% if user.id == post.author %}
+         
+          <div>
+            {{ post.likes|length }}
+            {% if user.id in post.likes|map(attribute="author")|list %}
+            <a href="/like-post/{{post.id}}"><i class="fas fa-thumbs-up"></i></a>
+            {% else %}
+            <a href="/like-post/{{post.id}}"><i class="far fa-thumbs-up"></i></a>
+            {% endif %}
+            {% if user.id == post.author %}
           <div class="btn-group">
             <button
               type="button"
@@ -21,6 +29,7 @@
           </div>
           {% endif %}
         </div>
+          </div>
         <div class="card-body">
           <div class="card-text">{{post.text}}</div>
           <br />
