--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -23,7 +23,7 @@
             ></button>
             <ul class="dropdown-menu">
               <li>
-                <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a>
+                <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete Post</a>
               </li>
             </ul>
           </div>
@@ -90,7 +90,7 @@
               class="form-control"
               placeholder="Comment something!"
             />
-            <button type="submit" class="btn btn-primary">Comment</button>
+            <button type="submit" class="btn btn-success">Comment</button>
           </form>
         </div>
         <div class="card-footer text-muted">{{post.date_created}}</div>
@@ -100,7 +100,7 @@
     {% block footer %}
     <div align="center">
       <a href="/create-post"
-        ><button type="button" class="btn btn-primary btn-lg">
+        ><button type="button" class="btn btn-success btn-lg">
           Create a Post
         </button></a
       >
